# NewsAtDoorstep

./: CMakeLists.txt  README.md
include/: AudioHandler.hpp  CollisionHandler.hpp  Definitions.hpp  FloorHandler.hpp  Game.hpp  GameOverScreen.hpp  HUD.hpp  Newspaper.hpp  NewspaperContainer.hpp  Player.hpp  PowerBar.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  Target.hpp  TargetContainer.hpp
src/: AudioHandler.cpp  CMakeLists.txt  CollisionHandler.cpp  FloorHandler.cpp  Game.cpp  GameOverScreen.cpp  HUD.cpp  Newspaper.cpp  NewspaperContainer.cpp  Player.cpp  PowerBar.cpp  Target.cpp  TargetContainer.cpp  main.cpp
